# indexScraper

./: .gitignore  Dockerfile  README.md  config.json  convert_json.py  pyproject.toml  scrape.py  scrape_data.sh  transform_load.py
.circleci/: config.yml
athena_queries/: apartments.sql  cars.sql  houses.sql
index_scrapy/: scrapy.cfg
index_scrapy/DDL/: apartments.json  cars.json  houses.json
index_scrapy/index_scrapy/: items.py  middlewares.py  pipelines.py  settings.py
index_scrapy/index_scrapy/spiders/: index_spider.py
infrastructure/: athena.tf  backend.tf  eventbridge.tf  fargate.tf  glue.tf  iam.tf  lambda.tf  main.tf  queries.tf  s3.tf  sns.tf  step_function.tf  variables.tf  vpc.tf
lambda/: config.json  helper.py  main.py
queries/: DDL_dm.sql  DDL_staging.sql  load_apartments.sql  load_cars.sql  load_houses.sql
src/: config.json  helper.py
