[tool.poetry]
name = "034-indexscraper"
version = "0.1.0"
description = ""
authors = ["nsamardzic13 <nikola.samardzic1997@gmail.com>"]
readme = "README.md"
packages = [{include = "034_indexscraper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.10.0"
google-cloud-bigquery = "^3.11.4"
ipykernel = "^6.25.1"
pyarrow = "^12.0.1"
pandas = "^2.0.3"
pandas-gbq = "^0.19.2"
google-cloud-storage = "^2.10.0"
nbconvert = "^7.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
