[tool.poetry]
name = "index_scraper"
version = "0.1.0"
description = ""
authors = ["nsamardzic13 <nikola.samardzic1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.0"
arrow = "^1.3.0"
scrapy = "^2.11.0"
boto3 = "^1.34.33"
pyarrow = "^15.0.0"
ipykernel = "^6.29.3"
unidecode = "^1.3.8"
redmail = "^0.6.0"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
ignore-paths = [
    "^.venv/.*$",
    "^lambda(?!/[^/]+$)/.*$",
    "^index_scrapy(?!/index_scrapy$)/.*$"
]